# organic_chemistry

./: .gitignore  GNN.ipynb  create_data.ipynb  main.py  pyproject.toml  training.ipynb
diversity/: qm9_bandgap_test_with_answer.csv
for_M1/: qm9_bandgap_test_without_answer.csv  qm9_bandgap_train.csv  submission.csv  training.ipynb
